2006-10-03  Michal Ludvig  <michal@logix.cz>

	* Updated version to 0.3.1
	* Added schema.sql to the distribution tarball. Oops!

2006-09-23  Michal Ludvig  <michal@logix.cz>

	* Updated version to 0.3
	* Updated auxiliary files (README, TODO, ...)

2006-09-23  Michal Ludvig  <michal@logix.cz>

	* Create root directory on startup if it doesn't exist.
	* Changed timestamp fields in 'inodes' table to 'int
	  unsigned' to avoid conversion between MYSQL timestamp and 
	  Unix timestamp in a number of queries.
	* Updated schema.sql. Now with autocreating '/' it's enough 
	  to use 'mysqldump -d' i.e. dump just the schema without
	  data.

2006-09-17  Michal Ludvig  <michal@logix.cz>

	* pool.c: Rewritten from scratch. It doesn't have a limit
	  on open connections anymore and instead creates new ones
	  on request. Returned connections are not immediately 
	  closed, instead put into a LIFO-type stack and reused
	  later. Maximum number of connections idling on the stack 
	  can be set as well as the initial number of connections
	  opened on start.
	  This rewrite triggered search-and-replace changes
	  in mysqlfs.c (no more MYSQL_CONN type). Instead I return
	  the connection itself (MYSQL*) though typed as (void*) -  
	  probably not the best choice. The intent was to
	  prepare for support of other DBs. It works for now but 
	  I'll likely rewrite or improve this later ;-) 
	  
2006-09-15  Michal Ludvig  <michal@logix.cz>

	* Enable reconnect when mysql connection gone away.

2006-09-13  Michal Ludvig  <michal@logix.cz>

	* Splitted table fs into a separate table for directory 
	  tree and a table for inodes. This triggered radical 
	  changes to most parts of the source. However now it's 
	  possible to have hardlinks, delayed unlink and some other 
	  sweeties difficult or impossible to implement with 
	  the previous scheme.
	* open() stores inode number in fi->fh and read(), write()
	  release() and some other functions use that instead 