@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.8 2006/10/02 22:34:03 ludvigm Exp $
+dnl $Id: configure.in,v 1.9 2007/03/28 13:05:48 ludvigm Exp $
 
 AC_INIT(mysqlfs, 0.3.1)
 AM_INIT_AUTOMAKE(dist-bzip2)
@@ -33,12 +33,12 @@ done
 FUSE_LDFLAGS="-L${FUSE_LIB_DIR}"
 FUSE_CFLAGS="-I${FUSE_INC_DIR}"
 LDFLAGS="$LDFLAGS $FUSE_LDFLAGS"
-CFLAGS="$LDFLAGS $FUSE_CFLAGS"
+CFLAGS="$CFLAGS $FUSE_CFLAGS"
 
 MYSQL_CONFIG=$(which mysql_config)
 if test "$MYSQL_CONFIG"; then
   MYSQL_LDFLAGS=$(${MYSQL_CONFIG} --libs_r)
-  MYSQL_CFLAGS=$(${MYSQL_CONFIG} --cflags)
+  MYSQL_CFLAGS=$(${MYSQL_CONFIG} --include)
 else
   for i in /usr/local/mysql /usr/local /usr; do
     if test -r $i/include/mysql/mysql.h; then
